[project]
name = "aula08-bootcamp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Pallisser de Oliveira",email = "rafaelpallisser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
